force-app/main/default/objects/Usuarios_para_asignacion_Casos_SAC__c/Usuarios_para_asignacion_Casos_SAC__c.object-meta.xml
<CustomObject>
    <label>Usuarios para asignacion - Casos SAC</label>
    <nameField>
        <displayFormat>ACSAC-{000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usuarios para asignación - Casos SAC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>