force-app/main/default/objects/Usuarios_para_asignacion_Casos_SAC__c/fields/Objeto__c.field-meta.xml
<CustomField>
    <fullName>Objeto__c</fullName>
    <label>Objeto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <label>Caso</label>
            </value>
            <value>
                <fullName>Lead</fullName>
                <label>Prospecto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>