force-app/main/default/objects/Usuarios_para_asignacion_Casos_SAC__c/fields/Ultimo_Caso_Asignado__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Caso_Asignado__c</fullName>
    <description>Último Caso Asignado</description>
    <inlineHelpText>Último Caso Asignado</inlineHelpText>
    <label>Último Caso Asignado</label>
    <type>DateTime</type>
</CustomField>