force-app/main/default/objects/Usuarios_para_asignacion_Casos_SAC__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Usuarios_para_asignacion_Casos_SAC</relationshipName>
    <type>Lookup</type>
</CustomField>