force-app/main/default/objects/Usuarios_para_asignacion_Casos_SAC__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Tegucigalpa</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>San Pedro Sula</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>No tiene zona el cliente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>