force-app/main/default/objects/Usuarios_para_asignacion_Casos_SAC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Ultimo_Caso_Asignado__c</columns>
    <columns>Usuario__c</columns>
    <columns>Zona__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>