force-app/main/default/objects/Usuarios_para_asignacion_Casos_SAC__c/listViews/Usuarios_para_Prospectos.listView-meta.xml
<ListView>
    <fullName>Usuarios_para_Prospectos</fullName>
    <columns>NAME</columns>
    <columns>Usuario__c</columns>
    <columns>Objeto__c</columns>
    <columns>Zona__c</columns>
    <columns>Ultimo_Caso_Asignado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Objeto__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>Usuarios para Prospectos</label>
</ListView>