force-app/main/default/objects/Usuarios_para_asignacion_Casos_SAC__c/listViews/UsuariosParaObjetoCaso.listView-meta.xml
<ListView>
    <fullName>UsuariosParaObjetoCaso</fullName>
    <columns>Usuario__c</columns>
    <columns>Ultimo_Caso_Asignado__c</columns>
    <columns>Zona__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Objeto__c</field>
        <operation>notEqual</operation>
        <value>Case,Lead</value>
    </filters>
    <label>Usuarios para objeto Caso</label>
</ListView>